Add working speech feature and prep for splash screen

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
     "@react-native-voice/voice": "^3.2.4",
-    "expo": "^53.0.9"
+    "expo": "^53.0.9",
+    "expo-speech": "~13.1.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2"
   }
 }
